# dddmr_navigation

./: .gitignore  README.md
dddmr_docker/: run_demo.bash
dddmr_docker/docker_file/: Dockerfile_x64  Dockerfile_x64_cuda  Dockerfile_x64_cuda_go2  Dockerfile_x64_gazebo  Dockerfile_x64_l4t_r36  build.bash  run_l4t.bash  run_x64.bash  run_x64_gpu.bash
src/dddmr_beginner_guide/: README.md
src/dddmr_canbus/: CMakeLists.txt  README.md  package.xml
src/dddmr_canbus/include/: async_can.hpp  canbus_read_node.h  canbus_rw_node.h
src/dddmr_canbus/src/: async_can.cpp  canbus_read_node.cpp  canbus_rw_node.cpp
src/dddmr_global_planner/: CMakeLists.txt  README.md
src/dddmr_global_planner/config/: path_planning_on_2d_static_layer.yaml  path_planning_on_lidar_static_layer.yaml  path_planning_on_no_entry_layer.yaml  path_planning_on_static_layer.yaml
src/dddmr_global_planner/launch/: path_planning_on_lidar_static_layer.launch
src/dddmr_global_planner/rviz/: path_planning_on_2d_static_layer.rviz  path_planning_on_lidar_static_layer.rviz
src/dddmr_global_planner/src/: a_star_on_pc.cpp  dynamic_window_aware_global_planner.cpp  global_planner.cpp
src/dddmr_global_planner/test/: dummy_pc_pub.cpp
src/dddmr_global_planner/utils/: occupancy2ground.cpp
src/dddmr_lego_loam/: README.md  download_files.bash
src/dddmr_lego_loam/lego_loam_bor/: CMakeLists.txt  package.xml
src/dddmr_local_planner/: README.md
src/dddmr_mcl_3dl/: README.md
src/dddmr_mcl_3dl/config/: mcl_3dl.yaml
src/dddmr_odom_3d/: CMakeLists.txt  README.md
src/dddmr_odom_3d/include/: odom_3d_example.h
src/dddmr_odom_3d/launch/: example_odom_3d_launch.py
src/dddmr_odom_3d/src/: odom_3d_example.cpp
src/dddmr_p2p_move_base/: README.md
src/dddmr_p2p_move_base/config/: go2_localization.yaml  go2_mapping.yaml  p2p_move_base_localization.yaml  p2p_move_base_mapping.yaml  p2p_wo_mcl.yaml
src/dddmr_p2p_move_base/launch/: go2_mapping.launch  p2p_move_base_localization.launch  p2p_move_base_mapping.launch
src/dddmr_p2p_move_base/rviz/: p2p_move_base_localization.rviz
src/dddmr_p2p_move_base/src/: p2p_global_plan_manager.cpp
src/dddmr_perception_3d/: README.md
src/dddmr_perception_3d/plugins/: cluster_marking.cpp  multilayer_spinning_lidar.cpp  no_entry_layer.cpp  nothing_layer.cpp  path_blocked_strategy.cpp  (+2 more)
src/dddmr_semantic_segmentation/: README.md
(+50 files in other folders)
